<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EducationPage">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:text="@string/A"
        android:textSize="30sp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_view_shape"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="20dp"
        android:id="@+id/educationTxt"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/blue"
        android:layout_marginTop="30dp"
        android:background="@drawable/text_view_shape"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_below="@+id/educationTxt"
        android:text="@string/B"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView1"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/textView"
        android:background="@drawable/text_view_shape"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="25sp"
        android:textColor="@color/blue"
        android:layout_centerHorizontal="true"
        android:text="@string/C"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/textView1"
        android:textSize="25sp"
        android:textColor="@color/blue"
        android:background="@drawable/text_view_shape"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/D"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/textView2"
        android:textSize="25sp"
        android:textColor="@color/blue"
        android:background="@drawable/text_view_shape"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/E"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView4"
        android:layout_marginTop="0dp"
        android:layout_below="@+id/textView3"
        android:textSize="25sp"
        android:textColor="@color/blue"
        android:background="@drawable/text_view_shape"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/F"
        android:layout_marginStart="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:textSize="25sp"
        android:textColor="@color/blue"
        android:background="@drawable/text_view_shape"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:layout_centerHorizontal="true"
        android:text="@string/G"
        android:layout_marginStart="10dp"/>

    <Button
        android:id="@+id/back"
        android:background="@drawable/button_shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView5"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/H"
        android:textSize="22sp" />

</RelativeLayout>