<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@drawable/text_view_shape"
        android:layout_marginTop="30dp"
        android:text="@string/I"
        android:textColor="@color/blue"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:textSize="40sp" />

    <EditText
        android:id="@+id/etLogGmail"
        android:layout_width="265dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/loginTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:autofillHints="no"
        android:background="@drawable/edit_txt_shape"
        android:ems="10"
        android:hint="@string/J"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingEnd="25dp"
        android:textColorHint="@color/blue" />

    <EditText
        android:id="@+id/etLoginPassword"
        android:layout_width="265dp"
        android:layout_height="62dp"
        android:layout_below="@+id/etLogGmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/edit_txt_shape"
        android:ems="10"
        android:hint="@string/K"
        android:inputType="textPassword"
        android:maxLines="1"
        android:minHeight="48dp"
        android:paddingStart="20dp"
        android:textColorHint="@color/blue" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="154dp"
        android:background="@drawable/button_shape"
        android:layout_height="62dp"
        android:layout_below="@+id/etLoginPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/L"
        android:textColor="#E1BEE7"
        android:textSize="18sp"
        android:textStyle="normal" />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/text_view_shape"
        android:layout_below="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="@string/M"
        android:textColor="@color/blue"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textSize="22sp"
        tools:ignore="TextSizeCheck" />

</RelativeLayout>